load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "spdlog",
    build_file = "//third_party:spdlog.bazel",
    sha256 = "697f91700237dbae2326b90469be32b876b2b44888302afbc7aceb68bcfe8224",
    strip_prefix = "spdlog-1.10.0",
    url = "https://github.com/gabime/spdlog/archive/refs/tags/v1.10.0.tar.gz",
)

http_archive(
    name = "gsl",
    build_file = "//third_party:gsl.bazel",
    sha256 = "f0e32cb10654fea91ad56bde89170d78cfbf4363ee0b01d8f097de2ba49f6ce9",
    strip_prefix = "GSL-4.0.0",
    url = "https://github.com/microsoft/GSL/archive/refs/tags/v4.0.0.tar.gz",
)

http_archive(
    name = "asio",
    build_file = "//third_party/boost:asio.bazel",
    sha256 = "226438b0798099ad2a202563a83571ce06dd13b570d8fded4840dbc1f97fa328",
    strip_prefix = "asio-asio-1-28-0/asio",
    url = "https://github.com/chriskohlhoff/asio/archive/refs/tags/asio-1-28-0.tar.gz",
)

http_archive(
    name = "stacktrace",
    build_file = "//third_party/boost:stacktrace.bazel",
    sha256 = "4294f204765f8467c862243dadb356af679b2d118527fab4ac337f28452e8afc",
    strip_prefix = "stacktrace-boost-1.80.0",
    url = "https://github.com/boostorg/stacktrace/archive/refs/tags/boost-1.80.0.tar.gz",
)

http_archive(
    name = "googletest",
    sha256 = "81964fe578e9bd7c94dfdb09c8e4d6e6759e19967e397dbea48d1c10e45d0df2",
    strip_prefix = "googletest-release-1.12.1",
    urls = ["https://github.com/google/googletest/archive/refs/tags/release-1.12.1.tar.gz"],
)
