load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "xyco_epoll_echo_server",
    srcs = ["echo_server.cc"],
    deps = [
        "//src/io:io_epoll",
        "//src/net:net_epoll",
        "//src/runtime",
    ],
)

cc_binary(
    name = "xyco_uring_echo_server",
    srcs = ["echo_server.cc"],
    deps = [
        "//src/io:io_uring",
        "//src/net:net_uring",
        "//src/runtime",
    ],
)

cc_binary(
    name = "asio_echo_server",
    srcs = ["asio_echo_server.cc"],
    deps = [
        "@asio",
    ],
)
