add_executable(xyco_epoll_http_server http_server.cc ${xyco_src_lib})
target_link_libraries(xyco_epoll_http_server GSL)
target_link_libraries(xyco_epoll_http_server spdlog)
target_link_libraries(xyco_epoll_http_server uring)
target_include_directories(xyco_epoll_http_server PRIVATE ../src/fs/standalone/epoll PRIVATE ../src/io/standalone/epoll PRIVATE ../src/net/standalone/epoll)

add_executable(xyco_uring_http_server http_server.cc ${xyco_src_lib})
target_link_libraries(xyco_uring_http_server GSL)
target_link_libraries(xyco_uring_http_server spdlog)
target_link_libraries(xyco_uring_http_server uring)
target_include_directories(xyco_uring_http_server PRIVATE ../src/fs/standalone/io_uring PRIVATE ../src/io/standalone/io_uring PRIVATE ../src/net/standalone/io_uring)
