load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "xyco_epoll_main",
    srcs = ["main.cc"],
    deps = [
        "//src/io:io_epoll",
        "//src/net:net_epoll",
        "//src/runtime",
    ],
)

cc_binary(
    name = "xyco_uring_main",
    srcs = ["main.cc"],
    deps = [
        "//src/io:io_uring",
        "//src/net:net_uring",
        "//src/runtime",
    ],
)
