load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "xyco_test_epoll",
    srcs = glob(
        [
            "**/*.cc",
            "common/*.h",
        ],
        exclude = ["**/io_uring/*.cc"],
    ),
    includes = ["common"],
    deps = [
        "//src/fs:fs_epoll",
        "//src/io:io_epoll",
        "//src/net:net_epoll",
        "//src/runtime",
        "//src/sync",
        "//src/time",
        "//src/utils",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "xyco_test_uring",
    srcs = glob(
        [
            "**/*.cc",
            "common/*.h",
        ],
        exclude = ["**/epoll/*.cc"],
    ),
    includes = ["common"],
    deps = [
        "//src/fs:fs_uring",
        "//src/io:io_uring",
        "//src/net:net_uring",
        "//src/runtime",
        "//src/sync",
        "//src/time",
        "//src/utils",
        "@googletest//:gtest_main",
    ],
)
