load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "fs_epoll",
    srcs = glob([
        "*.cc",
        "epoll/*.cc",
    ]),
    hdrs = glob([
        "*.h",
        "standalone/epoll/fs/*.h",
        "epoll/*.h",
    ]),
    includes = ["standalone/epoll"],
    strip_include_prefix = "//src",
    visibility = ["//visibility:public"],
    deps = [
        "//src/io:io_epoll",
        "//src/runtime",
        "//src/utils",
    ],
)

cc_library(
    name = "fs_uring",
    srcs = glob([
        "*.cc",
        "io_uring/*.cc",
    ]),
    hdrs = glob([
        "*.h",
        "standalone/io_uring/fs/*.h",
        "io_uring/*.h",
    ]),
    includes = ["standalone/io_uring"],
    strip_include_prefix = "//src",
    visibility = ["//visibility:public"],
    deps = [
        "//src/io:io_uring",
        "//src/runtime",
        "//src/utils",
    ],
)

cc_library(
    name = "fs_all",
    srcs = glob(["**/*.cc"]),
    hdrs = glob([
        "*.h",
        "epoll/*.h",
        "io_uring/*.h",
    ]),
    strip_include_prefix = "//src",
    visibility = ["//visibility:public"],
    deps = [
        "//src/io:io_all",
        "//src/runtime",
        "//src/utils",
    ],
)
