load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "net_epoll",
    srcs = glob([
        "*.cc",
        "epoll/*.cc",
    ]),
    hdrs = glob([
        "*.h",
        "standalone/epoll/net/*.h",
        "epoll/*.h",
    ]),
    includes = ["standalone/epoll"],
    strip_include_prefix = "//src",
    visibility = ["//visibility:public"],
    deps = [
        "//src/io:io_epoll",
        "//src/runtime",
        "//src/utils",
        "@spdlog",
    ],
)

cc_library(
    name = "net_uring",
    srcs = glob([
        "*.cc",
        "io_uring/*.cc",
    ]),
    hdrs = glob([
        "*.h",
        "standalone/io_uring/net/*.h",
        "io_uring/*.h",
    ]),
    includes = ["standalone/io_uring"],
    strip_include_prefix = "//src",
    visibility = ["//visibility:public"],
    deps = [
        "//src/io:io_uring",
        "//src/runtime",
        "//src/utils",
        "@spdlog",
    ],
)

cc_library(
    name = "net_all",
    srcs = glob(["**/*.cc"]),
    hdrs = glob([
        "*.h",
        "epoll/*.h",
        "io_uring/*.h",
    ]),
    strip_include_prefix = "//src",
    visibility = ["//visibility:public"],
    deps = [
        "//src/io:io_all",
        "//src/runtime",
        "//src/utils",
        "@spdlog",
    ],
)
