[package]
name = "git-hooks"
version = "0.1.0"
edition = "2018"
authors = ["dongxiaoyu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = {version = "0.3", default-features = false}
regex = "1.5"
anyhow = "1.0"
colored = "2.0"
num_cpus = "1.0"

[dev-dependencies]
tempfile = "3.2"
